# Wadden-Sea-backend

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: build-and-push.yml  testing.yml
docs/mkdocs/cloud/: database.md
examples/: AzureCosmosDBNoSqlDemo.py  database_population.ipynb  secrets.py
examples/papers/: simple_text.txt
infra/: ai-foundary.bicep  ai-foundry.bicep  azure-deploy.bicep  main.bicep  readme.md
infra/scripts/: create-resource-group.sh  delete-resource-group.sh  deploy-ai-foundry.sh  deploy-container.sh  deploy.sh  validate.sh
src/llm/: vault.py
src/wadden_sea/: __init__.py  cli.py  vault.py
src/wadden_sea/api/: app.py  engine.py  query.py  types.py
test/: test_vault.py
tests/: test_vault.py
