[tool.poetry]
name = "Wadden-Sea-backend"
version = "0.1.0"
description = "Overall package"
authors = ["Mostafa Farrag <mostafa.farrag@deltares.nl>"]
license = "Proprietary"
readme = "README.md"
keywords = ["llm", "generativeai", "chatbot", "rag", "natural language processing"]
repository = "https://github.com/Deltares-research/Wadden-Sea-backend"

packages = [{ include = "wadden_sea", from = "src"}]


[tool.poetry.urls]

[tool.poetry.dependencies]
python = ">=3.12,<4"
python-dotenv = "^1.0.1"
llama-index = "^0.12.36"


[tool.poetry.group.llm.dependencies]
llama-index-llms-azure-openai = "^0.3.2"
llama-index-embeddings-azure-openai = "^0.3.5"
azure-keyvault-secrets = "^4.10.0"


[tool.poetry.group.analysis.dependencies]
jupyterlab= "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
coverage = {extras = ["toml"], version = "^7.6.2"}



[tool.coverage.report]
show_missing = true
fail_under = 10


[tool.pytest.ini_options]
addopts = [ "--cov"]
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
    "unit: marks a test as unit test(deselect with '-m \"not unit\"')",
    "integration: marks a test as integration test (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
